@@ -1,5 +1,6 @@
 AUX opcion-1.1.1-fix-source.patch 408 RMD160 ae7b04815f119bb5ad6b3a321d98693e13b75812 SHA1 0203ee88b745a88da71c1ced45cece59b2d8929a SHA256 a2bf5eadbb98f2fb43d8ac8ae5c2ea2ee91509c54f3516d9781f2fa9e3a5097a
 DIST Opcion_v1.1.1_src.zip 319793 RMD160 7c0009798996601f24beffb89539fe9a6774d948 SHA1 0438c6f452a0fa70c3bc0a0be36ab5ba890cbe69 SHA256 f1af9606c63e200d860d01c2f7bd241031b857928b939fb8044d27aabf83f298
 EBUILD opcion-1.1.1-r1.ebuild 1348 RMD160 3710a93073d5c8db4d4fff9774f9f5f8a0401199 SHA1 d4c663505f2f7b429081c2f467eddaf084cc257b SHA256 cc0cf2bd3b352439b4c4c2a576987f9c22ad876341742b727cc8ab9c36ad60c3
-MISC ChangeLog 1829 RMD160 8cad0df5c693aeb13432634b772db6e705f675d9 SHA1 e7bf8c73f678023649ed60c2cd61eb21be2d5739 SHA256 eca4f5a879e928699e1eb66f3b8efcef4366be3a728458bc5b86a72a80f02c95
+EBUILD opcion-1.1.1-r2.ebuild 1493 RMD160 c3d049649508724f9dcba717550355f35e01c13a SHA1 c20e69c9b04bcc1a2be32402450ad7f924a7cb89 SHA256 bcde4b868a3841f930c6a87e1e52b709886e7325683f6007d88255234f379659
+MISC ChangeLog 1954 RMD160 9426d80b62749fbe556aaba22cfc61a9103bf4f7 SHA1 e70ab8c6649d17d6c2935dca47b982d75db92496 SHA256 7f79445c85de6c75755d3d1bc6f896f1197a112f855b477a778d44064cbeb81d
 MISC metadata.xml 158 RMD160 e563fdca0707ee5927deab77f2e5ef79816384ca SHA1 8e4ca6d183e52cdbea8cfba08b7a7910e648fc84 SHA256 9a8722fb0b5a1992b3942e85f23df4e08f10cabc2d783ca887479abe115b3ea8
